# erp-ns-client-python

./: README.md  pyproject.toml
erp_ns_client_python/: __init__.py
erp_ns_client_python/ns_client/: client.py  dataclasses.py  pika.py  settings.py
erp_ns_client_python/proto/: email.proto  email_pb2.py  slack.proto  slack_pb2.py
